--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "dotenv": "^10.0.0",
         "express": "^4.17.1",
         "express-fileupload": "^1.2.1",
-        "mongodb": "^4.2.2"
+        "mongodb": "^4.2.2",
+        "stripe": "^8.195.0"
     }
 }
